--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,16 @@
 
 streamlit>=1.28.0
 python-dotenv>=1.0.0
-
 langchain>=0.1.0
+langchain-core>=0.1.0
 langchain-cohere>=0.1.0
 langchain-community>=0.0.20
-
-
 chromadb>=0.4.18
 faiss-cpu>=1.7.4
-
 pypdf>=3.17.0
 pdfplumber>=0.10.3
-
-
 textblob>=0.17.1
 vaderSentiment>=3.3.2
-
 cohere>=4.37
-
-
 tiktoken>=0.5.1
 
