--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-
 streamlit>=1.28.0
 python-dotenv>=1.0.0
 langchain>=0.1.0
 langchain-core>=0.1.0
+langchain-text-splitters>=0.0.1
 langchain-cohere>=0.1.0
 langchain-community>=0.0.20
 chromadb>=0.4.18
@@ -13,4 +13,3 @@ textblob>=0.17.1
 vaderSentiment>=3.3.2
 cohere>=4.37
 tiktoken>=0.5.1
-
